develop/cloud/kubernetes/wiki/kubectl/yaml/network/loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: influxdb
spec:
  type: LoadBalancer
  ports:
    - port: 8086
  selector:
    name: influxdb
