develop/cloud/kubernetes/wiki/kubectl/yaml/network/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: influxdb
spec:
  rules:
    - host: influxdb.localhost.com
      http:
        paths:
          - backend:
              serviceName: influxdb
              servicePort: 8086
